# brewbot

./: .env.example  Dockerfile  README.md  pyproject.toml
app/: backstop.py  main.py  prompt.py
app/static/: index.html
eval/: golden_dataset.json  run_eval.py
