[project]
name = "brewbot"
version = "0.1.0"
description = "Specialty coffee Q&A chatbot powered by Gemini via LiteLLM"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "litellm>=1.30.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
]
